--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "axios": "^1.11.0",
     "formik": "^2.4.6",
     "react": "^19.1.1",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.0",
     "react-spinners": "^0.17.0",
